--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
-ftfy
+numpy
+tqdm
+six
+timm
+lmdb==1.3.0
+flask
 regex
-opencv-python
-pandas
-torchvision==0.8.2
-torch==1.7.1
+ftfy
+torch>=1.7.1
+# torchvisions
